--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -857,6 +857,18 @@ main.project .column2 {
   margin: 0 auto;
 }
 
+@media (max-width: 500px) {
+  .wallpapers {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .wallpapers {
+    max-width: 100%;
+  }
+}
+
 .wallpapers h1 {
   font-size: 10vw;
   text-align: center;
@@ -942,6 +954,21 @@ main.project .column2 {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 50%;
             flex: 0 1 50%;
+  }
+}
+
+.wallpapers img.desktop {
+  max-height: initial;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+@media (max-width: 850px) {
+  .wallpapers img.desktop {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
   }
 }
 
